# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-actions-demo.yml
brain_games/: __init__.py  cli.py  engine.py  games_engine.py
brain_games/games/: brain_calc.py  brain_calc_func.py  brain_even.py  brain_even_func.py  brain_gcd.py  brain_gcd_func.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_scripts.py
