[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games. 5 games for your brains: Even, Calculator, GCD, Progression, Prime"
repository = "https://github.com/DzmitrySha/python-project-lvl1"
readme = "README.md"
authors = ["DzmitrySha <ravenbydev@gmail.com>"]

packages = [
  { include = "brain_games" },
]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"